# etudes

./: LICENSE  README.md
ada/euler/: Makefile  project_euler.gpr  shell.nix
ada/hw/: .gitignore  Makefile  README.md  shell.nix
agda/hello/: .gitignore  Makefile
agda/nat/: .gitignore  Makefile  nat.agda
c/cephem/: cephem.c
c/compile-time/: README.md  generate.py  run.sh
c/directfb/: directfb.c
common-lisp/pdb-parser/: pdb-parser.lisp
common-lisp/ramp/: ramp.lisp
cpp/array/: Makefile  README.md  array.cpp
haskell/hw/: LICENSE  Makefile  README.md  hw.cabal
haskell/integration/: Main.hs  Makefile  README.md
html/boringpunk-notes-app/: README.md  form.html  home.html  notebook.html  page.html  search.html
html/tabs/: README.md  style.css  tabs.html
matcha-monday-will-to-live/: .gitignore  matcha.tex
ocaml/algebra/: algebra.ml
ocaml/satsolve/: satsolve.ml
other/comfyui/: README.md  flake.nix
other/flightgear-gnuplot/: flight-data.csv  log-config.xml  path.gp  plot.sh  script.gp
other/gromacs/: minimize.sh  top.top
other/matcha-monday-will-to-live/: Makefile  README.md
other/povray/: sun.pov
python/flask-starter/: README.md  main.py  pyproject.toml
python/gigasecond/: gigasecond.py
python/markup/: README.md  parser.py  pyproject.toml
rust/guess/: README.md
sml/algebra/: algebra.sml
sml/drawing/: drawing.sml
sml/perceptron/: perceptron.sml
sml/poker/: poker.sml
sml/probability/: probability.sml
sml/random/: random.sml
sml/simpson/: simpson.sml
vala/hello-world/: Makefile  README.md  shell.nix
(+19 files in other folders)
