cabal-version:      3.14
name:               hw
version:            0.1.0.0
synopsis:           Hello, world!
-- description:
license:            MIT
license-file:       LICENSE
author:             Fernando Borretti
maintainer:         fernando@borretti.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hw
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
